# scripture-wallpaper

./: .gitignore  auto_deploy.sh  cmd  index.html  package-lock.json  package.json  reinit_git.sh
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  scriptures.rs  scriptures_niv.rs
