[package]
name = "scripture-wallpaper-app"
version = "1.0.0"
description = "Daily scripture wallpaper app for Christians"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
wallpaper = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"
chrono = "0.4"
dirs = "6"
